force-app/main/default/objects/Test_Scenario__c/fields/Overview_description_of_scenario__c.field-meta.xml
<CustomField>
    <fullName>Overview_description_of_scenario__c</fullName>
    <label>Overview description of scenario</label>
    <type>TextArea</type>
</CustomField>