force-app/main/default/objects/Test_Scenario__c/fields/Passed_Test_Cases__c.field-meta.xml
<CustomField>
    <fullName>Passed_Test_Cases__c</fullName>
    <label>Passed Test Cases</label>
    <summaryFilterItems>
        <field>Test_Case__c.Test_Result__c</field>
        <operation>equals</operation>
        <value>Pass</value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Case__c.Test_Scenario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>