force-app/main/default/objects/Test_Scenario__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Projects__c</referenceTo>
    <relationshipLabel>Test Scenarios</relationshipLabel>
    <relationshipName>Test_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>