force-app/main/default/objects/Test_Scenario__c/fields/Project_Iteration__c.field-meta.xml
<CustomField>
    <fullName>Project_Iteration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Iteration</label>
    <referenceTo>Project_Iteration__c</referenceTo>
    <relationshipLabel>Test Scenarios</relationshipLabel>
    <relationshipName>Test_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>