force-app/main/default/objects/Test_Scenario__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requirement</label>
    <referenceTo>Requirement__c</referenceTo>
    <relationshipLabel>Test Scenarios</relationshipLabel>
    <relationshipName>Test_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>