force-app/main/default/objects/Test_Scenario__c/fields/Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Test_Result__c</fullName>
    <label>Test Result</label>
    <summaryForeignKey>Test_Case__c.Test_Scenario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>